add weibo 部署
