# docs/swagger.yaml
@@ -84,6 +84,25 @@ info:
   title: Golang Gin API
   version: "1.0"
 paths:
+  /api/v1/general/weibo/list:
+    get:
+      consumes:
+      - application/json
+      description: 获取微博热点数据
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: 获取微博热点数据
+      tags:
+      - 通用
   /api/v1/login:
     post:
       consumes:
